clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_redirect_stdout_to_stderr.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 81
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command 1>&2",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(Some(1), DuplicateOutput, Duplicate(Word(
                    value: "2",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
